{
  "version": 4,
  "terraform_version": "1.1.5",
  "serial": 56,
  "lineage": "b55a298f-2e18-a710-8747-a01b88ef7159",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "web_elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:505056832897:loadbalancer/web-elb",
            "availability_zones": [
              "us-west-2a",
              "us-west-2b"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "desync_mitigation_mode": "defensive",
            "dns_name": "web-elb-1186706471.us-west-2.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTP:80/",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "web-elb",
            "idle_timeout": 60,
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "web-elb",
            "security_groups": [
              "sg-0096a0f50c85f5648"
            ],
            "source_security_group": "505056832897/Demo SG",
            "source_security_group_id": "sg-0096a0f50c85f5648",
            "subnets": [
              "subnet-0092e09cc175154d1",
              "subnet-0eb0e33d062bfd518"
            ],
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "aws_security_group.demosg1",
            "aws_subnet.demosubnet",
            "aws_subnet.demosubnet1",
            "aws_vpc.demovpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "demogateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:505056832897:internet-gateway/igw-0ac15f7c690facd1d",
            "id": "igw-0ac15f7c690facd1d",
            "owner_id": "505056832897",
            "vpc_id": "vpc-091823559fb257f46"
          },
          "dependencies": [
            "aws_vpc.demovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:505056832897:route-table/rtb-090713fd522216e64",
            "id": "rtb-090713fd522216e64",
            "owner_id": "505056832897",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ac15f7c690facd1d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-091823559fb257f46"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.demogateway",
            "aws_vpc.demovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0936b3b94237db413",
            "route_table_id": "rtb-090713fd522216e64",
            "subnet_id": "subnet-0092e09cc175154d1"
          },
          "dependencies": [
            "aws_internet_gateway.demogateway",
            "aws_route_table.route",
            "aws_subnet.demosubnet",
            "aws_vpc.demovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c287e86ddbde906e",
            "route_table_id": "rtb-090713fd522216e64",
            "subnet_id": "subnet-0eb0e33d062bfd518"
          },
          "dependencies": [
            "aws_internet_gateway.demogateway",
            "aws_route_table.route",
            "aws_subnet.demosubnet1",
            "aws_vpc.demovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "demosg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:505056832897:security-group/sg-0a7548b368719da4f",
            "description": "Demo module",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a7548b368719da4f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Demo security group",
            "name_prefix": "",
            "owner_id": "505056832897",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-091823559fb257f46"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.demovpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "demosg1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:505056832897:security-group/sg-0096a0f50c85f5648",
            "description": "Demo module",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0096a0f50c85f5648",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow http from anywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow http from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Demo SG",
            "name_prefix": "",
            "owner_id": "505056832897",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-091823559fb257f46"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.demovpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "demosubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:505056832897:subnet/subnet-0092e09cc175154d1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0092e09cc175154d1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "505056832897",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Demo subnet"
            },
            "tags_all": {
              "Name": "Demo subnet"
            },
            "vpc_id": "vpc-091823559fb257f46"
          },
          "dependencies": [
            "aws_vpc.demovpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "demosubnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:505056832897:subnet/subnet-0eb0e33d062bfd518",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eb0e33d062bfd518",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "505056832897",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Demo subnet 1"
            },
            "tags_all": {
              "Name": "Demo subnet 1"
            },
            "vpc_id": "vpc-091823559fb257f46"
          },
          "dependencies": [
            "aws_vpc.demovpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "demovpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:505056832897:vpc/vpc-091823559fb257f46",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a1a24dc5ac374d5b",
            "default_route_table_id": "rtb-0aab453a68fe916e5",
            "default_security_group_id": "sg-02b3c42e21992af71",
            "dhcp_options_id": "dopt-22b7b25a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-091823559fb257f46",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0aab453a68fe916e5",
            "owner_id": "505056832897",
            "tags": {
              "Name": "Demo VPC"
            },
            "tags_all": {
              "Name": "Demo VPC"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}